DashItem: fix dashboard title overflows

--- a/_inc/client/components/dash-item/style.scss
+++ b/_inc/client/components/dash-item/style.scss
@@ -46,10 +46,6 @@
 		color: darken( $gray, 20% );
 	}
 
-	.dops-section-header__label:before {
-		@include long-content-fade( $color : $white );
-	}
-
 	&.is-working,
 	&.is-premium-inactive {
 		.dops-section-header__actions {
@@ -78,14 +74,14 @@
 
 // conditional styles for content when items are inactive
 .jp-dash-item__is-inactive {
-	.dops-section-header .dops-section-header__label:before {
-		@include long-content-fade( $color : $gray-light );
-	}
-
 	.dops-card {
 		background-color: $gray-light;
 	}
-
+	.dops-section-header__label-text {
+		&:before {
+			@include long-content-fade( $color : $gray-light );
+		}
+	}
 	.jp-dash-item__description {
 		font-style: italic;
 		color: darken( $gray, 20% );
